versioned_docs/version-1.46/admin/okteto-insights.mdx
---
title: Okteto Insights
description: Configure Okteto Insights for detailed analytics on resource usage, build, and deployment metrics
sidebar_label: Okteto Insights
id: okteto-insights
---

import Image from "@theme/Image";

Okteto Insights exposes a metrics endpoint you can scrape to collect analytics on resource usage, builds, and deployments.

:::info
For SaaS or Bring Your Own Cloud (BYOC) customers, Okteto Insights comes pre-configured with Grafana dashboards.
See the [Okteto Insights Dashboard documentation](core/okteto-insights-dashboards.mdx) for instructions on accessing and understanding the available metrics.
Use this guide only if you want to enable another tool to consume Insights data.
:::

## Overview

Okteto generates data from developer activity on the platform, including product usage, infrastructure utilization, and performance metrics.

You can use this data to monitor the health of your Okteto cluster, track trends in build and deploy times, and measure user activity.

<p align="center">
  <Image
    src={require("@site/static/img/insights-activity-dashboard.png").default}
    alt="Okteto Insights Dashboard Example"
    width="800"
  />
</p>

## Consuming Okteto Insights data

Okteto Insights data is available via API endpoints that can be scraped using tools like Prometheus. This allows Admins to consume this data programmatically. To get started, enable Insights, retrieve your bearer token, and deploy the [open-source Insights Dashboards](https://github.com/okteto/insights-dashboards) to visualize your Okteto data.

### Enable the Helm Setting
This feature is `disabled` by default for Self-Hosted instances. To `enable` it you will need to set the helm setting [`insights.enabled`](self-hosted/helm-configuration.mdx#insights) to `true` and upgrade your Okteto instance.

Once you enable the feature, Okteto will create a new endpoint accessible through `https://okteto.SUBDOMAIN/metrics` where data will be available in Prometheus format. This new endpoint is protected with a bearer token which is auto-generated by Okteto. Alternatively, you can specify your own token using the secret defined in this [helm setting](self-hosted/helm-configuration.mdx#insights).

### Retrieve your Bearer Token
To retrieve your Insights bearer token from the Okteto Admin Dashboard, navigate to `Admin` -> `General` under the Integrations section. You can copy your bearer token by clicking on the `Show Insights Token` button in the Insights panel.

### Set up the Dashboards
To begin collecting and visualizing Insights data, [use our sample repository](https://github.com/okteto/insights-dashboards). It includes setups for deploying Prometheus and Grafana, along with sample dashboards.

If you'd like to configure this yourself, you'll need to configure a scraper to connect to this endpoint using the proper token. An example of a Prometheus scraper configuration is:

```yaml
- job_name: "okteto_scrapper"
  scrape_interval: 5m
  scrape_timeout: 30s

  scheme: https
  static_configs:
    - targets: ["okteto.<SUBDOMAIN>:443"] # replace <SUBDOMAIN> with your Okteto subdomain
  authorization:
    type: Bearer
    credentials: <bearer-token> # replace <bearer-token> with the token generated by Okteto
```

:::caution
Okteto Self-Hosted **does not** include a Prometheus instance or storage for this data.
You will need to deploy your own Prometheus instance (or another data collection platform) to consume the data and manage counters and metrics using Prometheus’ built-in features

The [Open Source Dashboard Repository](https://github.com/okteto/insights-dashboards) includes a Prometheus configuration and is a good starting place for configuration.
:::

## Insights Dashboards

Okteto provides [open source Grafana dashboards](https://github.com/okteto/insights-dashboards) based on the Insights [data made available](#what-data-is-available).
These dashboards should enable to you quickly get started using Okteto Insights and serve as a base to build more customized metrics for your organization.

Refer to the [Okteto Insights Dashboard documentation](core/okteto-insights-dashboards.mdx) for instructions on understanding the available metrics.

<p align="center">
  <Image
    src={require("@site/static/img/insights-activity-dashboard.png").default}
    alt="Okteto Insights Dashboard Example"
    width="800"
  />
</p>

## What data is available

Okteto Insights provides the following metric groupings:

- [Build Metrics](#build-metrics): Information on Build times and results by environment
- [Deploy Metrics](#deploy-metrics): Information on Deploy times and results by environment
- [Namespace Metrics](#namespace-metrics): Information on the Sleeping and Awake Namespaces
- [Node Metrics](#node-metrics): CPU and Memory stats on your Okteto Nodes
- [Pod Metrics](#pod-metrics): CPU and Memory stats on your Okteto Pods
- [Preview Metrics](#preview-metrics): Information on Sleeping and Awake Preview Environments
- [Test Metrics](#test-metrics): Information on test times and results by environment
- [User Metrics](#user-metrics): Information on User activity

:::note
All metrics provided by Okteto will have the prefix `okteto_`
:::

Okteto will progressively make more data available through this endpoint. The following metrics are available today:

### Build Metrics

:::note
Only successful builds are tracked with `okteto_usage_build_duration_seconds`.
:::

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_usage_build_duration_seconds` | [histogram](https://prometheus.io/docs/practices/histograms/) | This represents metrics related to build times of the images that are being built within Okteto. This metric only reflects builds that have successfully completed. | `devenv_name`, `image_name`, `namespace`, `repository` |
| `okteto_usage_build_result` | [counter](https://prometheus.io/docs/concepts/metric_types/#counter) | This represents metrics related to the result of the builds that are being built within Okteto. | `devenv_name`, `image_name`, `namespace`, `repository`, `result` |

- **Build Metrics label definitions:**
  - **`devenv_name`**: If defined, this represents the name of the deployed development environment it is linked to
  - **`image_name`**: Represents the name of the image to be built as it appears in the Okteto Manifest
  - **`namespace`**: Contains the okteto cli context from where the request originated
  - **`repository`**: Contains the git repository where the okteto manifest that defines this image is hosted
  - **`result`**: `success`, `failure` or `skipped` represent the status of the image

### Deploy Metrics

:::note
Only successful deployments are tracked with `okteto_usage_deploy_duration_seconds`.
:::

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_usage_deploy_duration_seconds` | [histogram](https://prometheus.io/docs/practices/histograms/) | This represents metrics related to the time it takes to deploy a development environment. This metric only show deployments that have successfully completed. | `devenv_name`, `namespace`, `repository`, `phase` |
| `okteto_usage_deploy_result` | [counter](https://prometheus.io/docs/concepts/metric_types/#counter) | This represents metrics related to the result of the deployment of a development environment. | `devenv_name`, `namespace`, `repository`, `result` |

- **Deploy Metrics label definitions:**
  - **`devenv_name`**: Represents the name of the deployed development environment
  - **`namespace`**: Contains the okteto cli context from where the request originated
  - **`repository`**: Contains the git repository where the okteto manifest that defines this development environment is hosted
  - **`phase`**: Represents the phase of the deployment (either `compose` or `commands`) for which the time series is being recorded. `compose` refers to the [Compose](reference/okteto-manifest.mdx#deploy-with-compose) section, and `commands` refers to the [Commands](reference/okteto-manifest.mdx#deploy-with-commands) section of the Okteto manifest's Deploy section, indicating how long it took to complete. Summing the time series would represent the total length of a Deploy action.
  - **`result`**: Can be `success` or `failure` to represent the status of the deployment

### Namespace Metrics

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_system_namespace_status_condition` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the status of a namespace. Preview namespaces are not included here. | `namespace`, `condition`, `owner_id` |
| `okteto_system_namespace_created_time` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the creation time of a namespace. | `namespace`, `owner_id` |

- **Namespace Metrics label definitions:**
  - **`namespace`**: Contains the namespace name
  - **`condition`**: Represents the condition of the namespace, values can be `active` or `sleeping`
  - **`owner_id`**: Represents the owner ID of the namespace

### Node Metrics

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_system_node` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the number of nodes running Okteto. | none |
| `okteto_system_node_memory_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total memory (in bytes) available for allocating to a node. | `node_name` |
| `okteto_system_node_memory_requested_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total memory (in bytes) [requested](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) for a node. | `node_name` |
| `okteto_system_node_memory_usage_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total memory (in bytes) in use for a node. | `node_name` |
| `okteto_system_node_cpu_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total CPU cores available for allocating to a node. | `node_name` |
| `okteto_system_node_cpu_requested_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total CPU cores [requested](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) for a node. | `node_name` |
| `okteto_system_node_cpu_usage_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total CPU cores in use for a node. | `node_name` |

- **Node Metrics label definitions:**
  - **`node_name`**: Contains the name of the node represented

### Pod Metrics

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_system_pod_container_cpu_requests_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the total CPU [requested](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) of a pod and standard container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_container_cpu_limits_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the CPU limits of a specific pod and standard container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_init_container_cpu_requests_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the CPU requests of a specific pod and init container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_init_container_cpu_limits_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the CPU limits of a specific pod and init container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_container_cpu_usage_cores` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the CPU usage of a specific pod and standard container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_container_memory_requests_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the memory [requested](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) for a specific pod and standard container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_container_memory_limits_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the memory limits for a specific pod and standard container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_init_container_memory_requests_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the memory [requested](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) for a specific pod and init container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_init_container_memory_limits_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the memory limits for a specific pod and init container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |
| `okteto_system_pod_container_memory_usage_bytes` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the memory usage of a specific pod and standard container at that point in time. | `container_name`, `pod_name`, `namespace`, `node_name`, `devenv_name`, `pod_type`, `controller_type`, `controller_name` |


- **Pod Metrics label definitions:**
  - **`container_name`**: Contains the name of the container being represented
  - **`pod_name`**: Contains the name of the pod being represented
  - **`namespace`**: Contains the namespace name
  - **`node_name`**: Contains the node name
  - **`devenv_name`**: If defined, this represents the name of the deployed development environment it is linked to
  - **`pod_type`**: It determines if the pod is in development mode or not, values can be `development` or `standard`
  - **`controller_type`**: Represents the type of the top controller that created the pod, values can be `deployment` or `statefulset`
  - **`controller_name`**: Contains the name of the top controller that created the pod

### Preview Metrics

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_system_preview_status_condition` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the status of a preview. | `namespace`, `condition`, `scope`, `owner_id` |
| `okteto_system_preview_created_time` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the creation time of a preview. | `namespace`, `scope`, `owner_id` |

- **Preview Metrics label definitions:**
  - **`namespace`**: Contains the namespace name
  - **`condition`**: Represents the condition of the preview, values can be `active` or `sleeping`
  - **`scope`**: Represents the scope of the preview, values can be `personal` or `global`
  - **`owner_id`**: Represents the owner ID of the preview

### Test Metrics

:::note
Only successful tests are tracked with `okteto_usage_test_duration_seconds`.
:::

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_usage_test_duration_seconds` | [histogram](https://prometheus.io/docs/practices/histograms/) | This represents metrics related to the time it takes to execute a test container. This metric only show tests that have successfully completed. | `devenv_name`, `namespace`, `repository`, `test_name` |
| `okteto_usage_test_result` | [counter](https://prometheus.io/docs/concepts/metric_types/#counter) | This represents metrics related to the result of the tests of a development environment. | `devenv_name`, `namespace`, `repository`, `test_name`, `result` |

- **Test Metrics label definitions:**
  - **`devenv_name`**: Represents the name of the development environment
  - **`namespace`**: Contains the Okteto CLI context from where the request originated
  - **`repository`**: Contains the git repository where the Okteto manifest that defines this Development Environment is hosted
  - **`test_name`**: Represents the test container being executed
  - **`result`**: Can be `success` or `failure` to represent the status of the test container

### User Metrics

| Metric Name  | Type         | Description  | Labels       |
| :----------- | :----------- | :----------- | :----------- |
| `okteto_system_user_last_seen_time` | [gauge](https://prometheus.io/docs/concepts/metric_types/#gauge) | This metric represents the last activity of a user. | `id`, `external_id`, `role` |

- **User Metrics label definitions:**
  - **`id`**: Contains the user id
  - **`external_id`**: The external id of the user
  - **`role`**: The role of the user

## Troubleshooting and Support
### Metric Server Availability
Okteto Insights relies on the Kubernetes Metric Server. If the Metric Server is unavailable, requests to the `/metrics` endpoint, like requests from a [configured scraper](https://www.okteto.com/docs/admin/okteto-insights/#set-up-the-dashboards), will fail. You can troubleshoot the Metric Server or refer to the [documentation](https://kubernetes.io/docs/tasks/debug/debug-cluster/resource-metrics-pipeline/#metrics-server) for further guidance.